k8s/www16-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: www16-intranet
  labels:
    name: www16-intranet
