k8s/openvpn_rendered.yaml
---
# Source: openvpn/templates/openvpn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www16-vpn-openvpn
  labels:
    app: openvpn
    chart: openvpn-4.2.3
    release: www16-vpn
    heritage: Helm
spec:
  ports:
    - name: openvpn
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: openvpn
    release: www16-vpn
  type: LoadBalancer
---
# Source: openvpn/templates/openvpn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www16-vpn-openvpn
  labels:
    app: openvpn
    chart: openvpn-4.2.3
    release: www16-vpn
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openvpn
      release: www16-vpn
  template:
    metadata:
      labels:
        app: openvpn
        release: www16-vpn
      annotations:
        checksum/config: 9b9c013630e662b935de1202599384c2817c92d4cd7b2cbf1f83a6c133fc9481
    spec:
      containers:
      - name: openvpn
        image: "jfelten/openvpn-docker:1.1.0"
        imagePullPolicy: IfNotPresent
        command: ["/etc/openvpn/setup/configure.sh"]
        ports:
        - containerPort: 443
          hostPort: 2222
          name: openvpn
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 2
          exec:
            command:
            - nc
            - -z
            - 127.0.0.1
            - "443"
        resources:
          requests:
            cpu: "300m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "128Mi"
        volumeMounts:
          - mountPath: /etc/openvpn/setup
            name: openvpn
            readOnly: false
          - mountPath: /etc/openvpn/certs
            name: certs
            readOnly: false
      volumes:
      - name: openvpn
        configMap:
          name: www16-vpn-openvpn
          defaultMode: 0775
      - name: certs
        persistentVolumeClaim:
          claimName: www16-vpn-openvpn
