k8s/collabora_rendered.yaml
---
# Source: collabora-code/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www16-collabora-code
  labels:
    app.kubernetes.io/name: collabora-code
    helm.sh/chart: collabora-code-1.0.6
    app.kubernetes.io/instance: www16-collabora-code
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: collabora-code
    app.kubernetes.io/instance: www16-collabora-code
---
# Source: collabora-code/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www16-collabora-code
  labels:
    app.kubernetes.io/name: collabora-code
    helm.sh/chart: collabora-code-1.0.6
    app.kubernetes.io/instance: www16-collabora-code
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: collabora-code
      app.kubernetes.io/instance: www16-collabora-code
  template:
    metadata:
      labels:
        app.kubernetes.io/name: collabora-code
        app.kubernetes.io/instance: www16-collabora-code
    spec:
      containers:
        - name: collabora-code
          image: "collabora/code:4.0.3.1"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 9980
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
              - MKNOD
---
# Source: collabora-code/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www16-collabora-code
  labels:
    app.kubernetes.io/name: collabora-code
    helm.sh/chart: collabora-code-1.0.6
    app.kubernetes.io/instance: www16-collabora-code
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "collabora.wwwx.me"
      secretName: www16-collabora-tls-secret
  rules:
    - host: "collabora.wwwx.me"
      http:
        paths:
          - path: /
            backend:
              serviceName: www16-collabora-code
              servicePort: http
---
# Source: collabora-code/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "www16-collabora-code-test-connection"
  labels:
    app.kubernetes.io/name: collabora-code
    helm.sh/chart: collabora-code-1.0.6
    app.kubernetes.io/instance: www16-collabora-code
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['www16-collabora-code:9980']
  restartPolicy: Never
